syntax = "proto3";

package  students.models.v1;
option go_package = "github.com/Domenick1991/students/internal/pb/models";

message StudentsInfoModel {
    uint64 id     = 1; 
    string name   = 2;
    string email  = 3;
    uint64 age    = 4;
}

message StudentsUpsertModel {
    string name   = 1;
    string email  = 2;
    uint64 age    = 3;
}